// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches NavLink tabs 1`] = `
.c0 {
  display: block;
  padding: 0.5rem;
  border: 1px solid transparent;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  color: #007bff;
}

.c0:hover,
.c0:focus {
  text-decoration: none;
  color: #0056b3;
}

.c0:hover,
.c0:focus {
  border-color: #e9ecef #e9ecef #dee2e6;
}

<a
  className="c0 sc-bdVaJa eRiqeT"
/>
`;

exports[`Styles matches NavLink tabs active 1`] = `
.c0 {
  display: block;
  padding: 0.5rem;
  border: 1px solid transparent;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  color: #007bff;
  color: #495057;
  background-color: #fff;
  color: #495057;
  border-color: #e9ecef #e9ecef #fff;
}

.c0:hover,
.c0:focus {
  text-decoration: none;
  color: #0056b3;
}

.c0:hover,
.c0:focus {
  color: #495057;
}

<a
  className="c0 sc-bdVaJa eRiqeT"
/>
`;

exports[`Styles matches NavLink tabs disabled 1`] = `
.c0 {
  display: block;
  padding: 0.5rem;
  border: 1px solid transparent;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  color: #007bff;
  color: #6c757d;
  border-color: transparent;
}

.c0:hover,
.c0:focus {
  text-decoration: none;
  color: #0056b3;
}

.c0:hover,
.c0:focus {
  color: #6c757d;
}

<a
  className="c0 sc-bdVaJa eRiqeT"
  disabled={true}
/>
`;
